# covid-serology-analysis

./: AUTHORS.md  DEPLOYMENT.md  README.md  _headers  accuracy_clusters_and_predicted_values.ipynb  cluster_accuracy_and_predictive_values.csv  device_accuracy_and_predictive_values.csv  index.html  manufacturer_difference_analysis.ipynb  pyproject.toml  wrangler.jsonc
D3Visual/: D3_EDA_Part1.html  D3_EDA_Part2_V1.html  Q3_orig.html  Q3_orig_Old.html  eda_output2.csv  fda_table.csv  index.html
D3Visual/0-EDA/: D3_EDA_Part1.html  index.html
D3Visual/0-EDA/edaR/: discussion and conclusion.docx  eda.html  eda_co.ipynb
D3Visual/1-FDA/: fda.html  fda_table.html  index.html
D3Visual/2-Prevalence/: D3_EDA_Part2.html  D3_EDA_Part2_FilterType.html  README.md  index.html  prevalence.html
D3Visual/3-Clusters_Scatter/: README.md  accuracy_clusters.html  accuracy_clusters_and_predicted_values.ipynb  fda_table.csv  index.html
D3Visual/4-Manufacturer/: index.html  manufacturer_analysis.html  manufacturer_difference_analysis.ipynb
D3Visual/Part2_v1/: D3_EDA_Part2.html  igg_clusters_k6.csv
D3Visual/Prevalence/: prevalence.html
D3Visual/Scatter & Cluster/: igm_clusters_k6.csv
D3Visual/Scatter and Cluster/Scatter & Cluster/: D3_EDA_Part2_FilterType.html  igg_elbow.csv
data/: covid19serology.csv  device_level_tests.csv  df_igg_metrics.csv  df_igm_metrics.csv  igm_elbow.csv
data documentation/: index.html
eda/: eda.html  eda.qmd  eda_rbb.ipynb
